[gd_scene load_steps=7 format=3 uid="uid://bmil4knpx81j2"]

[ext_resource type="Script" path="res://scripts/live_preview.gd" id="1_c6kev"]
[ext_resource type="Texture2D" uid="uid://df6uqumd68lfc" path="res://assets/sprites/black.png" id="2_aefii"]
[ext_resource type="AudioStream" uid="uid://boyukfkauvaus" path="res://assets/sprites/demo.mp3" id="3_2vivu"]

[sub_resource type="Animation" id="25"]
length = 0.001

[sub_resource type="Animation" id="26"]
resource_name = "wave"
length = 4.8

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ao02s"]
_data = {
"RESET": SubResource("25"),
"wave": SubResource("26")
}

[node name="LivePreview" type="Node2D" groups=["World"]]
script = ExtResource("1_c6kev")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BackgroundImage" type="TextureRect" parent="Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_aefii")
stretch_mode = 6

[node name="BackgroundImageSquare" type="TextureRect" parent="Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -540.0
offset_right = 540.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2vivu")
bus = &"Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2vivu")

[node name="Node2D" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="WaveAnchor" type="Node2D" parent="."]
position = Vector2(0, 540)

[node name="NoteHolder" type="Node2D" parent="WaveAnchor" groups=["NoteHolder"]]

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaveAnchor/NoteHolder"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_ao02s")
}

[node name="SpeedUp" type="Timer" parent="."]
wait_time = 10.434
one_shot = true

[node name="SpeedUp2" type="Timer" parent="."]
wait_time = 41.739
one_shot = true

[node name="Slowdown" type="Timer" parent="."]
wait_time = 45.217
one_shot = true

[node name="Slowdown2" type="Timer" parent="."]
wait_time = 52.173
one_shot = true

[node name="Slowdown3" type="Timer" parent="."]
wait_time = 52.173
one_shot = true

[node name="SpeedUp4" type="Timer" parent="."]
wait_time = 48.695
one_shot = true

[node name="SpeedUp5" type="Timer" parent="."]
wait_time = 55.652
one_shot = true

[node name="stop" type="Timer" parent="."]
wait_time = 2.06
one_shot = true

[connection signal="finished" from="AudioStreamPlayer2" to="." method="song_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpeedUp" to="." method="_on_SpeedUp_timeout"]
[connection signal="timeout" from="SpeedUp2" to="." method="_on_SpeedUp_timeout"]
[connection signal="timeout" from="Slowdown" to="." method="_on_Slowdown_timeout"]
[connection signal="timeout" from="Slowdown2" to="." method="_on_Slowdown_timeout"]
[connection signal="timeout" from="Slowdown3" to="." method="_on_Slowdown_timeout"]
[connection signal="timeout" from="SpeedUp4" to="." method="_on_SpeedUp_timeout"]
[connection signal="timeout" from="SpeedUp5" to="." method="_on_SpeedUp_timeout"]
